syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "github.com/xiaonanln/goverse/client/proto/gateway_pb";

package gateway;

service GatewayService {
    rpc Register (Empty) returns (stream google.protobuf.Any);
    rpc Call (CallObjectRequest) returns (CallResponse);
    rpc CreateObject (CreateObjectRequest) returns (CreateObjectResponse);
    rpc DeleteObject (DeleteObjectRequest) returns (DeleteObjectResponse);
}

// RegisterResponse is the first message that the client can receive from the Register stream
message RegisterResponse {
  string client_id = 1;
}

message CallObjectRequest {
  string client_id = 1;
  string method = 2;
  google.protobuf.Any request = 3;
  string type = 4;
}

message CallResponse {
  google.protobuf.Any response = 1;
}

message CreateObjectRequest {
  string type = 1;
  string id = 2; // ID must be specified
}

message CreateObjectResponse {
  string id = 1;
}

message DeleteObjectRequest {
  string id = 1;
}

message DeleteObjectResponse {
  // Empty response - success is indicated by no error
}

message Empty {}
